add auth and token stubs
